Fix for logo display on Windows and adjusted filter spacing

--- a/html/sites/all/themes/custom/ocha-basic/assets/sass/components/_calendar-actions.scss
+++ b/html/sites/all/themes/custom/ocha-basic/assets/sass/components/_calendar-actions.scss
@@ -48,7 +48,7 @@
 	.block-views {
 		width: 25%;
 
-		&:last-child {
+		&:nth-child(4n) {
 			padding: 0;
 		}
 	}
