--- a/html/sites/all/themes/custom/ocha-basic/assets/sass/components/_header.scss
+++ b/html/sites/all/themes/custom/ocha-basic/assets/sass/components/_header.scss
@@ -7,6 +7,10 @@
 	width: 140px;
 	height: 38px;
 	margin: 0;
+
+	img {
+		height: 100%;
+	}
 }
 
 .site-header-top {
